@@ -2760,103 +2760,6 @@
         sprops                  ; STR
         .end
 
-;;; RAS_MACRO_OFFSET_FORMATER @type
-;;; ( VAL DEPTH -- STR )
-;;;
-;;; Given an offset value in the stack and a depth level,
-;;; push the string representation of the offset to the stack.
-;;;
-;;; Macro-arguments:
-;;; @type
-;;;   pkl_ast_node with the type of the value in the stack.
-
-        .macro offset_formater @type
-        ;; Format the offset magnitude
-        .let @unit = PKL_AST_TYPE_O_UNIT (@type)
-        .let @base_type = PKL_AST_TYPE_O_BASE_TYPE (@type)
-        swap                    ; DEPTH VAL
-        ogetm                   ; DEPTH VAL MAG
-        rot                     ; VAL MAG DEPTH
-        .c PKL_PASS_SUBPASS (@base_type);
-                                ; VAL STR
-        ;; Separator
-        push "#"                ; VAL STR #
-        rot                     ; STR # VAL
-        ;; Format the offset unit.
-        ;; If the unit has a name, use it.
-        ;; Otherwise, format the unit in decimal.
-        .let @unit_type = PKL_AST_TYPE (@unit)
-        ogetu                   ; STR # VAL UNIT
-        nip                     ; STR # UNIT
-        dup                     ; STR # UNIT UNIT
-        .call _pkl_unit_name    ; STR # UNIT STR
-        sel                     ; STR # UNIT STR SEL
-        bzlu .no_unit_name
-        drop                    ; STR # UNIT STR
-        nip                     ; STR # STR
-        ba .unit_name_done
-.no_unit_name:
-        drop2                   ; STR # UNIT
-        push int<32>10          ; STR # UNIT 10
-        format @unit_type       ; STR # STR
-.unit_name_done:
-        .call _pkl_strcat3      ; STR
-        sel                     ; STR LEN
-        push ulong<64>0         ; STR LEN IDX
-        swap                    ; STR IDX LEN
-        push "offset"           ; STR IDX LEN CLASS
-        sprops                  ; STR
-        .end
-
-;;; RAS_MACRO_STRING_FORMATER
-;;; ( VAL DEPTH -- STR )
-;;;
-;;; Given a string value and a depth in the stack, push the
-;;; the string representation to the stack.
-
-        .macro string_formater
-        drop                    ; VAL
-        .call _pkl_escape_string; VAL
-        push "\""               ; VAL "
-        swap                    ; " VAL
-        push "\""               ; " VAL "
-        .call _pkl_strcat3      ; STR
-        sel                     ; STR LEN
-        push ulong<64>0         ; STR LEN IDX
-        swap                    ; STR IDX LEN
-        push "offset"           ; STR IDX LEN CLASS
-        sprops                  ; STR
-        .end
-
-;;; RAS_MACRO_FORMAT_BOFFSET
-;;; ( ULONG -- STR )
-;;;
-;;; Given a bit-offset in the stack, format it out like a real
-;;; offset in hexadecimal, and push it to the stack .
-
-        .macro format_boffset
-        push int<32>16          ; ULONG 16
-        formatlu 64             ; STR
-        push "0x"
-        swap                    ; 0x STR
-        sconc
-        nip2                    ; STR
-        sel                     ; STR LEN
-        push ulong<64>0         ; STR LEN IDX
-        swap                    ; STR IDX LEN
-        push "integer"          ; STR IDX LEN CLASS
-        sprops                  ; STR
-        ;; RAS turns "#b" into "(B_arg)"; so we use '\x62' for 'b'.
-        push "#\x62"            ; STR #b
-        sconc
-        nip2                    ; STR
-        sel                     ; STR LEN
-        push ulong<64>0         ; STR LEN IDX
-        swap                    ; STR IDX LEN
-        push "offset"           ; STR IDX LEN CLASS
-        sprops                  ; STR
-        .end
-
 ;;; RAS_MACRO_PRINT_INT_SUFFIX @type
 ;;; ( -- )
 ;;;
@@ -2931,98 +2834,6 @@
         ;; Print the suffix
         .e print_int_suffix @type
         push "integer"
-        endsc
-        .end
-
-;;; RAS_MACRO_OFFSET_PRINTER @type
-;;; ( VAL DEPTH -- )
-;;;
-;;; Given an offset value in the stack and a depth level,
-;;; print the offset.
-;;;
-;;; Macro-arguments:
-;;; @type
-;;;   pkl_ast_node with the type of the value in the stack.
-
-        .macro offset_printer @type
-        push "offset"
-        begsc
-        ;; Print the offset magnitude
-        .let @unit = PKL_AST_TYPE_O_UNIT (@type)
-        .let @base_type = PKL_AST_TYPE_O_BASE_TYPE (@type)
-        swap                    ; DEPTH VAL
-        ogetm                   ; DEPTH VAL MAG
-        rot                     ; VAL MAG DEPTH
-        .c PKL_PASS_SUBPASS (@base_type);
-                                ; VAL
-        ;; Separator
-        push "#"
-        prints
-        ;; Print the offset unit.
-        ;; If the unit has a name, use it.
-        ;; Otherwise, print the unit in decimal.
-        .let @unit_type = PKL_AST_TYPE (@unit)
-        ogetu                   ; VAL UNIT
-        dup                     ; VAL UNIT UNIT
-        .call _pkl_unit_name    ; VAL UNIT STR
-        sel                     ; VAL UNIT STR SEL
-        bzlu .no_unit_name
-        drop                    ; VAL UNIT STR
-        prints                  ; VAL UNIT
-        drop                    ; VAL
-        ba .unit_name_done
-.no_unit_name:
-        drop
-        drop
-        push int<32>10          ; VAL UNIT 10
-        print @unit_type        ; VAL
-.unit_name_done:
-        drop                    ; _
-        push "offset"
-        endsc
-        .end
-
-;;; RAS_MACRO_STRING_PRINTER
-;;; ( VAL DEPTH -- )
-;;;
-;;; Given a string value and a depth in the stack, print
-;;; the string.
-
-        .macro string_printer
-        drop                    ; VAL
-        push "string"
-        begsc
-        push "\""
-        prints
-        .call _pkl_escape_string; VAL
-        prints
-        push "\""
-        prints
-        push "string"
-        endsc
-        .end
-
-;;; RAS_MACRO_PRINT_BOFFSET
-;;; ( ULONG -- )
-;;;
-;;; Given a bit-offset in the stack, print it out like a real
-;;; offset in hexadecimal.
-
-        .macro print_boffset
-        push "offset"
-        begsc
-        push "integer"
-        begsc
-        push "0x"
-        prints
-        push int<32>16          ; ULONG 16
-        printlu 64              ; _
-        push "integer"
-        endsc
-        ;; RAS turns "#b" into "(B_arg)"; so we use '\x62' for 'b'.
-        push "#\x62"
-        prints
-        push "offset"
         endsc
         .end
 
